--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "ejs": "^2.7.1",
     "express": "^4.16.3",
     "mongodb": "^3.3.2",
     "mongoose": "^5.7.1"
